Fix error icon size on mobile

--- a/src/app/shell/RefreshButton.m.scss
+++ b/src/app/shell/RefreshButton.m.scss
@@ -24,11 +24,14 @@
   height: 14px;
   width: 14px;
   padding: 2px;
-  font-size: 10px;
   border-radius: 50%;
   position: absolute;
   bottom: -8px;
   right: -8px;
+
+  :global(.app-icon) {
+    font-size: 10px;
+  }
 }
 
 .errorTooltip {
